Support serializing picture element

For picture element, we should not remove srcset attribute from
source child elements and we should add image resource for
ImageSourceURL().

Bug: 915982
Change-Id: I6374ab2177eb5c0324d4fcb036cb9b67beb90c48
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1662949
Reviewed-by: Kent Tamura <tkent@chromium.org>
Commit-Queue: Jian Li <jianli@chromium.org>
Cr-Commit-Position: refs/heads/master@{#670159}

Former-commit-id: 8db3aedefb7900483f520bf9487757e1b1b7e56f